# oif-solver

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONNEXION_AGGREGATEUR.md  Cargo.toml  DEMARRAGE_MINI_SOLVER.md  Dockerfile  EIP-712_SUMMARY.md  OVERVIEW.md  QUICKSTART_UNISWAP.md  README.md  RESUME_IMPLEMENTATION.md  UNISWAP_ROUTING.md  Unit testing (pending files) 286cbd12786080ac8510dd30b72133e7.md  docker-compose.cluster.yml  implementation_signature.md  oif-demo  oif_demo_cron.sh  rust-toolchain.toml  start-uniswap-solver.sh  test-uniswap-quote.sh  test_solver_logs.sh
.github/: CODEOWNERS  (+1 more)
crates/solver-account/: Cargo.toml  solver-account.md
crates/solver-account/src/: lib.rs  signer.rs
crates/solver-account/src/implementations/: kms.rs  local.rs
crates/solver-bridge/: Cargo.toml
crates/solver-bridge/src/: lib.rs  monitor.rs  storage.rs  test_support.rs  threshold.rs  types.rs
crates/solver-bridge/src/implementations/: mod.rs
crates/solver-bridge/src/implementations/layerzero/: contracts.rs  mod.rs  types.rs
crates/solver-bridge/src/implementations/layerzero_vaultbridge/: contracts.rs  mod.rs  types.rs
crates/solver-config/: Cargo.toml  solver-config.md
crates/solver-config/src/: lib.rs  loader.rs
crates/solver-config/src/builders/: config.rs
crates/solver-core/: AGENTS.md  Cargo.toml  solver-core.md
crates/solver-core/src/: lib.rs  order_preparation.rs  order_rehydration.rs
crates/solver-core/src/builder/: mod.rs
crates/solver-core/src/bump/: lineage.rs  mod.rs  policy.rs  service.rs
crates/solver-core/src/cost/: mod.rs  profitability.rs
crates/solver-core/src/engine/: context.rs  cost_profit.rs  event_bus.rs  live_estimate.rs  mod.rs  post_fill_overrides.rs  pusher.rs  startup_readiness.rs  token_manager.rs
crates/solver-core/src/handlers/: compact_reservation.rs  forced_withdrawal.rs  intent.rs  mod.rs  order.rs  settlement.rs  transaction.rs
crates/solver-core/src/monitoring/: mod.rs  settlement.rs  transaction.rs
crates/solver-core/src/recovery/: chain_evidence.rs  mod.rs
crates/solver-core/src/state/: mod.rs  order.rs  transaction_attempt.rs
crates/solver-core/tests/: post_fill_override_integration.rs  transaction_attempt_store.rs  transaction_resilience_repro.rs  tx_bump_storage_cas.rs
crates/solver-delivery/: Cargo.toml  solver-delivery.md
crates/solver-delivery/src/: compact.rs  lib.rs  revert_classifier.rs
crates/solver-delivery/src/implementations/evm/: alloy.rs  fees.rs  nonce.rs  op_stack.rs
crates/solver-demo/: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  solver-demo.md
crates/solver-demo/src/: constants.rs  lib.rs  main.rs
crates/solver-demo/src/cli/: mod.rs  output.rs
crates/solver-demo/src/commands/: accounts.rs  config_generator.rs  environment.rs  intent.rs  mod.rs  quote.rs  token.rs
crates/solver-demo/src/core/: abi_manager.rs  api.rs  blockchain.rs  config.rs  contract_manager.rs  contracts.rs  deployer_manager.rs  jwt.rs  logging.rs  mod.rs  session.rs  session_manager.rs  signing.rs  storage.rs  tokens.rs
crates/solver-demo/src/models/: accounts.rs  contract.rs  intent.rs  mod.rs  quote.rs  session.rs
crates/solver-demo/src/operations/: mod.rs
crates/solver-demo/src/services/: api_client.rs  file_indexer.rs  intent_service.rs  jwt_service.rs  local_environment_service.rs  mod.rs  quote_service.rs  signing_service.rs  token_service.rs
crates/solver-demo/src/types/: chain.rs  error.rs  extensions.rs  hex.rs  mod.rs  models.rs  session.rs
crates/solver-demo/src/utils/: address.rs  amount.rs  constants.rs  format.rs  mod.rs  placeholders.rs
crates/solver-discovery/: Cargo.toml  solver-discovery.md
crates/solver-discovery/src/: lib.rs
crates/solver-e2e-tests/: AGENTS.md  Cargo.toml  README.md
crates/solver-e2e-tests/artifacts/: FalseOracle.json  MockMailboxV2.json  Permit2.json  RevertingOutputSettler.json
crates/solver-e2e-tests/src/: lib.rs
crates/solver-e2e-tests/tests/: admin_api_e2e.rs  api_e2e_orders.rs  chain_aware_recovery_e2e.rs  compact_allocator_e2e.rs  compact_reservation_e2e.rs  deny_list_e2e.rs  eip3009_e2e.rs  failure_e2e_onchain.rs  failure_e2e_settlement.rs  happy_e2e_open_fill_settle.rs  permit2_e2e.rs  rebalance_native_eth_metadata.rs  rebalance_native_eth_unit.rs  recovery_indexing_e2e.rs  resilience_e2e.rs  submit_e2e_hyperlane.rs  transaction_attempt_delivery_e2e.rs  tx_bump_resilience_e2e.rs
crates/solver-e2e-tests/tests/chain_aware_recovery_e2e/: fixture.rs
crates/solver-e2e-tests/tests/resilience_e2e/: fixture.rs
crates/solver-order/: Cargo.toml  solver-order.md
crates/solver-order/src/: lib.rs
crates/solver-pricing/: Cargo.toml  solver-pricing.md
crates/solver-pricing/src/: lib.rs  profitability.rs
crates/solver-pricing/src/implementations/: coingecko.rs  defillama.rs  mock.rs  mod.rs
crates/solver-settlement/: Cargo.toml  solver-settlement.md
crates/solver-settlement/src/: admission.rs  lib.rs  oracle_binding.rs  pusher.rs  utils.rs
crates/solver-settlement/src/implementations/: broadcaster.rs  direct.rs  fill_description.rs  hyperlane.rs
crates/solver-storage/: Cargo.toml  solver-storage.md
crates/solver-storage/src/: compact_reservations.rs  config_store.rs  lib.rs  nonce_store.rs  redis_health.rs  reservation_store.rs
crates/solver-storage/src/implementations/: file.rs  memory.rs  redis.rs
crates/solver-storage/src/readiness/: mod.rs  redis.rs
crates/solver-storage/tests/: redis_cluster_integration.rs
crates/solver-types/: Cargo.toml  solver-types.md
crates/solver-types/src/: account.rs  admin_api.rs  api.rs  auth.rs  costs.rs  delivery.rs  deployment_config.rs  discovery.rs  events.rs  finality.rs  lib.rs  networks.rs  operator_config.rs  order.rs  pricing.rs  provider.rs  quote_binding.rs  secret_string.rs  seed_overrides.rs  storage.rs  transaction_attempt.rs  validation.rs  versioned.rs
crates/solver-types/src/standards/: eip7683.rs  eip7930.rs  mod.rs  profitability_calculators.rs
crates/solver-types/src/utils/: constants.rs  conversion.rs  eip712.rs  formatting.rs  helpers.rs  mod.rs
(+226 files in other folders)
