[package]
name = "solver-account"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
alloy-consensus = { workspace = true }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
async-trait = "0.1"
hex = "0.4"
mockall = { version = "0.13", optional = true }
solver-types = { path = "../solver-types" }
thiserror = "2.0.17"
toml = { workspace = true }

[features]
testing = ["mockall"]

[dev-dependencies]
tokio = { workspace = true }
