[package]
name = "solver-account"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
alloy-consensus = { workspace = true }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
async-trait = "0.1"
hex = "0.4"
mockall = { workspace = true, optional = true }
solver-types = { path = "../solver-types" }
thiserror = "2.0.17"
toml = { workspace = true }
tokio = { workspace = true }

# KMS dependencies (optional)
alloy-signer-aws = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
aws-sdk-kms = { workspace = true, optional = true }

[features]
testing = ["mockall"]
kms = ["alloy-signer-aws", "aws-config", "aws-sdk-kms"]

[dev-dependencies]
tokio = { workspace = true }
