[package]
name = "solver-config"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
dotenvy = "0.15"
regex = "1.10"
rust_decimal = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
solver-types = { path = "../solver-types" }
thiserror = "2.0"
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true, features = ["test-util"] }
