[package]
name = "solver-core"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-sol-types = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
lru = "0.16"
once_cell = "1.19"
rust_decimal = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solver-account = { path = "../solver-account" }
solver-bridge = { path = "../solver-bridge" }
solver-config = { path = "../solver-config" }
solver-delivery = { path = "../solver-delivery" }
solver-discovery = { path = "../solver-discovery" }
solver-order = { path = "../solver-order" }
solver-pricing = { path = "../solver-pricing" }
solver-settlement = { path = "../solver-settlement" }
solver-storage = { path = "../solver-storage" }
solver-types = { path = "../solver-types" }
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
alloy-signer-local = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
mockall = { workspace = true }
solver-account = { path = "../solver-account", features = ["testing"] }
# Add testing feature only for tests
solver-delivery = { path = "../solver-delivery", features = ["testing"] }
solver-order = { path = "../solver-order", features = ["testing"] }
solver-pricing = { path = "../solver-pricing", features = ["testing"] }
solver-settlement = { path = "../solver-settlement", features = ["testing"] }
solver-storage = { path = "../solver-storage", features = ["testing"] }
tempfile = { workspace = true }
