[package]
name = "solver-core"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[features]
# Exposes test-only seams (e.g. `post_fill_overrides::estimate_post_fill_with_overrides_for_test`)
# so integration tests under `tests/` can drive production code paths
# that are otherwise `pub(crate)`. NEVER enable in release builds.
test-helpers = []

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-sol-types = { workspace = true }
async-trait = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
hex = { workspace = true }
lru = "0.16"
once_cell = "1.19"
rust_decimal = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solver-account = { path = "../solver-account" }
solver-bridge = { path = "../solver-bridge" }
solver-config = { path = "../solver-config" }
solver-delivery = { path = "../solver-delivery" }
solver-discovery = { path = "../solver-discovery" }
solver-order = { path = "../solver-order" }
solver-pricing = { path = "../solver-pricing" }
solver-settlement = { path = "../solver-settlement" }
solver-storage = { path = "../solver-storage" }
solver-types = { path = "../solver-types", features = ["oif-interfaces"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
uuid = { workspace = true }

[dev-dependencies]
alloy-signer-local = { workspace = true }
mockall = { workspace = true }
proptest = "1"
solver-account = { path = "../solver-account", features = ["testing"] }
# Add testing feature only for tests
solver-delivery = { path = "../solver-delivery", features = ["testing"] }
solver-order = { path = "../solver-order", features = ["testing"] }
solver-pricing = { path = "../solver-pricing", features = ["testing"] }
solver-settlement = { path = "../solver-settlement", features = ["testing"] }
solver-storage = { path = "../solver-storage", features = ["testing"] }
# Self dep with `test-helpers` enabled — integration tests under `tests/`
# link solver-core as an external library, so they don't see `cfg(test)`
# on items inside this crate. This dev-only self-dep flips the feature
# on for the integration-test build, exposing helpers like
# `engine::post_fill_overrides::estimate_post_fill_with_overrides_for_test`.
# Cargo handles self-deps in dev-dependencies without recursion.
solver-core = { path = ".", features = ["test-helpers"] }
tempfile = { workspace = true }
