[package]
name = "solver-delivery"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
alloy-consensus = { workspace = true }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-client = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-transport = { workspace = true }
alloy-transport-http = { workspace = true }
async-trait = "0.1"
hex = "0.4"
mockall = { workspace = true, optional = true }
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solver-account = { path = "../solver-account" }
solver-types = { path = "../solver-types" }
thiserror = "2.0.17"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tracing = "0.1"

[features]
testing = ["mockall"]