[package]
name = "solver-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solver-demo"
path = "src/bin/solver-demo.rs"

[dependencies]
# Workspace dependencies
solver-types = { path = "../solver-types" }
solver-config = { path = "../solver-config" }
solver-account = { path = "../solver-account" }

# Environment variables
dotenvy = "0.15"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Ethereum/Alloy
alloy-primitives = { version = "0.8", features = ["serde"] }
alloy-provider = { version = "0.5" }
alloy-signer = { version = "0.5" }
alloy-signer-local = { version = "0.5" }
alloy-contract = { version = "0.5" }
alloy-json-abi = { version = "0.8" }
alloy-dyn-abi = { version = "0.8" }
alloy-transport = { version = "0.5" }
alloy-transport-http = { version = "0.5" }
alloy-rpc-client = { version = "0.5" }
alloy-rpc-types = { version = "0.5" }
alloy-sol-types = { version = "0.8" }
alloy-network = { version = "0.5" }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# System info
sysinfo = "0.32"

# Utilities
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"
comfy-table = "7"
indicatif = "0.17"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
url = "2"
base64 = "0.22"
hostname = "0.4"

[dev-dependencies]
tempfile = "3"
