[package]
name = "solver-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solver-demo"
path = "src/bin/solver-demo.rs"

[dependencies]
# Workspace dependencies
solver-types = { path = "../solver-types" }
solver-config = { path = "../solver-config" }
solver-account = { path = "../solver-account" }

# Environment variables
dotenvy = "0.15"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Ethereum/Alloy
alloy-primitives = { version = "1.0.37", features = ["serde"] }
alloy-provider = { version = "1.0.37" }
alloy-signer = { version = "1.0.37" }
alloy-signer-local = { version = "1.0.37" }
alloy-contract = { version = "1.0.37" }
alloy-json-abi = { version = "1.0.37" }
alloy-dyn-abi = { version = "1.0.37" }
alloy-transport = { version = "1.0.37" }
alloy-transport-http = { version = "1.0.37" }
alloy-rpc-client = { version = "1.0.37" }
alloy-rpc-types = { version = "1.0.37" }
alloy-sol-types = { version = "1.0.37" }
alloy-network = { version = "1.0.37" }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# System info
sysinfo = "0.32"

# Utilities
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "3"
comfy-table = "7"
indicatif = "0.18"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
url = "2"
base64 = "0.22"
hostname = "0.4"

[dev-dependencies]
tempfile = "3"
