[package]
name = "solver-discovery"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
alloy-contract = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true, features = ["ws"] }
alloy-pubsub = "1.0.37"                                                    # Keep local - only used here
alloy-rpc-types = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-transport = { workspace = true }
alloy-transport-http = { workspace = true }
alloy-transport-ws = "1.0.37"                                              # Keep local - only used here
async-trait = "0.1"
axum = "0.8"
futures = "0.3"
hex = "0.4"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solver-types = { path = "../solver-types", features = ["oif-interfaces"] }
thiserror = "2.0.17"
tokio = { version = "1.0", features = ["sync", "rt-multi-thread"] }
toml = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1"

[dev-dependencies]
mockall = { workspace = true }
