[package]
name = "solver-order"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
alloy-dyn-abi = "1.0.37"
alloy-primitives = "1.0.37"
alloy-sol-types = "1.0.37"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solver-types = { path = "../solver-types" }
thiserror = "1.0"
toml = { workspace = true }
tracing = "0.1"
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { workspace = true }