[package]
name = "solver-order"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
alloy-dyn-abi = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
mockall = { version = "0.13", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solver-types = { path = "../solver-types" }
thiserror = "2.0"
toml = { workspace = true }
tracing = "0.1"
uuid = { version = "1.8", features = ["v4", "serde"] }

[features]
testing = ["mockall"]

[dev-dependencies]
tokio = { workspace = true }
