[package]
name = "solver-pricing"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
alloy-primitives = "0.8.0"
async-trait = "0.1.73"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
solver-types = { path = "../solver-types" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync"] }
toml = { workspace = true }
tracing = "0.1"