[package]
name = "solver-pricing"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
async-trait = "0.1.73"
mockall = { workspace = true, optional = true }
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = { version = "1.35", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solver-types = { path = "../solver-types" }
thiserror = "2.0"
tokio = { version = "1.0", features = ["sync", "time"] }
tracing = "0.1"


[features]
testing = ["mockall"]