[package]
name = "solver-settlement"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-transport = { workspace = true }
alloy-transport-http = { workspace = true }
async-trait = "0.1"
mockall = { version = "0.13", optional = true }
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = { workspace = true }
solver-storage = { path = "../solver-storage" }
solver-types = { path = "../solver-types" }
thiserror = "2.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync"] }
toml = { workspace = true }
tracing = "0.1"

[features]
testing = ["mockall"]
