[package]
name = "solver-storage"
version = "0.1.0"
edition = "2021"
rust-version = "1.86.0"

[dependencies]
async-trait = "0.1"
fs2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solver-types = { path = "../solver-types" }
thiserror = "2.0"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
toml = { workspace = true }
tracing = { workspace = true }
mockall = { version = "0.13", optional = true }

[features]
testing = ["mockall"]

[dev-dependencies]
tempfile = "3.8"
futures = "0.3"