[package]
name = "solver-storage"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
mockall = { workspace = true, optional = true }
redis = { version = "0.32", features = ["aio", "connection-manager", "tokio-comp", "script"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solver-types = { path = "../solver-types" }
thiserror = "2.0"
tokio = { version = "1.0", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing = { workspace = true }
uuid = { workspace = true }

[features]
testing = ["mockall"]

[dev-dependencies]
tempfile = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }