[package]
name = "solver-storage"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[features]
testing = ["mockall"]
# Enable integration tests against a local Redis Cluster (see
# docker-compose.cluster.yml). Excluded from default test runs because they
# require Docker.
cluster-tests = []

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
mockall = { workspace = true, optional = true }
redis = { version = "0.32", features = [
	"aio",
	"connection-manager",
	"tokio-comp",
	"script",
	"cluster",
	"cluster-async",
	"tls-rustls",
	"tls-rustls-webpki-roots",
	"tokio-rustls-comp",
] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
futures = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solver-types = { path = "../solver-types" }
thiserror = "2.0"
tokio = { version = "1.0", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
rust_decimal = { workspace = true }
serial_test = "3"
tempfile = { workspace = true }
uuid = { workspace = true }
