[package]
name = "solver-types"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[features]
default = ["oif-interfaces"]
oif-interfaces = ["alloy-sol-types", "alloy-contract"]

[dependencies]
alloy-primitives = { version = "0.8", features = ["std", "serde"] }
alloy-rpc-types = { version = "0.8" }
alloy-sol-types = { version = "0.8", features = ["std"], optional = true }
alloy-contract = { version = "0.8", optional = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
toml = { workspace = true }
tracing = "0.1"
zeroize = { version = "1.8", features = ["derive"] }